[gd_scene load_steps=5 format=3 uid="uid://b46u6r1c8d5ct"]

[ext_resource type="Script" uid="uid://df1ntxpad2nqb" path="res://player/player.gd" id="1_player_script"]
[ext_resource type="PackedScene" uid="uid://cwtk34mes1ymt" path="res://assets/models/player2.glb" id="1_x6tcr"]
[ext_resource type="PackedScene" uid="uid://dqdhyykrrnlgr" path="res://fx/jet_exhaust.tscn" id="2_ebx5c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ebx5c"]
size = Vector3(1, 0.447998, 1.19409)

[node name="Player2" type="CharacterBody3D"]
transform = Transform3D(3.5, 0, 0, 0, 3.5, 0, 0, 0, 3.5, 0, 0, 0)
script = ExtResource("1_player_script")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.024292, -0.282104)
shape = SubResource("BoxShape3D_ebx5c")

[node name="MeshInstance3D" parent="." instance=ExtResource("1_x6tcr")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Gun0" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.0929)

[node name="Gun1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.564526, 0, 0.107895)

[node name="Gun2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.554671, 0, 0.097752)

[node name="JetExhaust" parent="." instance=ExtResource("2_ebx5c")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.14509, 0.0962936, -0.89009)
amount = 30
lifetime = 0.5
visibility_aabb = AABB(-1, -1, -1, 2, 2, 8)

[node name="JetExhaust2" parent="." instance=ExtResource("2_ebx5c")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.172689, 0.0962936, -0.89009)
amount = 30
lifetime = 0.5
visibility_aabb = AABB(-1, -1, -1, 2, 2, 8)

[node name="JetExhaust3" parent="." instance=ExtResource("2_ebx5c")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.172689, -0.108, -0.89009)
amount = 30
lifetime = 0.5
visibility_aabb = AABB(-1, -1, -1, 2, 2, 8)

[node name="JetExhaust4" parent="." instance=ExtResource("2_ebx5c")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.16639, -0.108, -0.89009)
amount = 30
lifetime = 0.5
visibility_aabb = AABB(-1, -1, -1, 2, 2, 8)
